# clockify-cli

./: Cargo.toml  README.md
.cargo/: config
src/: api.rs  cfg.rs  commands.rs  main.rs  utils.rs
src/commands/: config.rs  projects.rs  tags.rs  task.rs
