[package]
name = "clockify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.0", features = ["derive"] }
iso8601-duration = "0.2.0"
lazy_static = "1.4.0"
regex = { version = "1.7.3", features = ["pattern"] }
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
toml = "0.7.3"
